packages/frontend/src/css/components/_nav-menu.scss
.nav-menu {
  display: flex;

  ul {
    padding: 0;
    margin: 0;
    list-style: none;
    display: none;

    li {
      padding: 0;
      margin: 0;
      display: flex;

      button,
      a {
        cursor: pointer;
        border: none;
        text-decoration: none;
        color: var(--nav-button-color);

        svg,
        span {
          display: block;
        }

        svg {
          width: 48px;
          height: 48px;
          padding: 4px;
        }
      }
    }
  }
  @media screen and (max-width: 767px) {
    .burger[aria-expanded='true'] + ul {
      display: flex;
      position: fixed;
      top: 0;
      left: 0;
      right: 0;
      bottom: 0;
      background: var(--bg);
      color: var(--fg);
      flex-direction: column;
      justify-content: center;
      align-items: center;
      padding: 32px;
      z-index: 10;

      li {
        display: flex;
        width: 100%;
        margin: 0;
        padding: 32px 0;

        button,
        a {
          width: 100%;
          display: flex;

          flex-direction: row;
          align-items: center;

          > * + * {
            margin-left: 8px;
          }

          span {
            font-size: 2rem;
            line-height: 2rem;
          }
        }
      }
    }
  }

  @media screen and (min-width: 768px) {
    ul {
      display: flex;
      justify-content: flex-end;

      li {
        &:not(:first-child) {
          margin-left: 12px;
        }

        button,
        a {
          display: flex;
          flex-direction: column;
          align-items: center;
          justify-content: center;
          padding: 4px;
          gap: 4px;

          span {
            font-size: 0.75rem;
            line-height: 1rem;
          }

          &:hover,
          &:focus,
          &:active {
            background: var(--nav-button-hover-background);
            color: var(--nav-button-hover-color);
            outline: 3px solid var(--input-outline);
            border-radius: 0;
          }
        }
      }
    }
  }
}

